# task-tracker-widget

./: .env.example  .pre-commit-config.yaml  README.md  get-azure-devops-work-items.py  pyproject.toml
dev-scripts/: check-bad-keywords.py
tasktrackerdesktopwidget/: __main__.py  cob.py  overlay.py  script.py  utils.py
tasktrackerdesktopwidget/ado/: pullrequests.py  workitems.py
tasktrackerdesktopwidget/config/: messages.yaml
tasktrackerdesktopwidget/experiments/: shortcut-experiment.ps1
tasktrackerdesktopwidget/generic/: pullrequests.py  workitems.py
