[tool.poetry]
name = "task-tracker-desktop-widget"
version = "0.2.4"
description = "A hacky desktop widget that displays tasks (e.g. in-progress) from a remote ticketing system"
authors = ["dp-rp <155602873+dp-rp@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "tasktrackerdesktopwidget" }
]

[tool.poetry.dependencies]
python = "^3.9"
azure-devops = "^7.1.0b4"
python-dotenv = "^1.0.1"
customtkinter = "^5.2.2"
pyyaml = "^6.0.2"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
launch = 'tasktrackerdesktopwidget.script:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
